<resources>
    <string name="app_name">حور الدنيا</string>
    <string name="splashText">حور الدنيا</string>
    <string name="rowItemtext">حوريات</string>
    <string name="description_menu">صفات الصحابيات</string>
    <string name="cloth_menu">كيف كان لباس الصحابيات</string>
    <string name="share_menu">مشاركة</string>
    <string name="descriptiontext1">التّضحية وبذل النّفس</string>
    <string name="descriptiontext11">قد سجلت كثيرٌ من الصّحابيّات الكرام مواقف بطوليّة شهد بها التّاريخ، ومن هؤلاء
    الصّحابيّات نسيبة بنت كعب أمّ عمارة رضي الله عنه التي وقفت موقفًا بطوليًّا في غزوة أحد
    حينما لم تكتف بمهمّة تطبيب الجرحى بل باشرت بنفسها القتال في سبيل الله
    والذّبّ عن النّبي عليه الصّلاة والسّلام حينما انفض عنه الكثيرون</string>
    <string name="descriptiontext2">محبّة العلم الشّرعي والتعلّم</string>
    <string name="descriptiontext22">فعلى الرّغم من أنّ الصّحابيّات كنّ يتميّزن بالحياء الشّديد،
    إلاّ أنّ ذلك لم يمنعهنّ من السّؤال عن العلم والتّعلم،
    فقد كانت السّيدة عائشة رضي الله عنها تقول رحم الله نساء الأنصار،
    لم يمنعهنّ الحياء عن السّؤال في الدّين والتفقّه فيه، كما كانت رضي الله عنها عالمةً متعلّمة،
    تحرص على أن تنهل من علم النّبي عليه الصّلاة والسّلام حتّى قيل إنّ ربع علوم الشّريعة عند عائشة</string>
    <string name="descriptiontext3">الفطنة والكياسة وحسن التّصرف</string>
    <string name="descriptiontext33">فقد كانت الصّحابيّات نساء
    عاقلات يجاهدن أنفسهنّ ويحملنها على الرّأي السّديد الرّاشد بعيدًا عن الهوى والعاطفة،
    ومن الأمثلة على ذلك ما فعلته إحدى نساء الأنصار حينما فقدت ولدها حيث عاد زوجها من عمله
    فلم تخبره بخبر ابنه إلاّ بعد أن تهيّأت وتزيّنت واجتمعا في تلك الليلة،
        ثمّ بعد ذلك ذكرت له خبر وفاته بأسلوب غايةٍ في الحكمة والفطنة وبما يبعث في النّفس الإيمان والتّسليم</string>
    <string name="descriptiontext4">الصّبر</string>
    <string name="descriptiontext44">فقد كانت الصّحابيّات مثالًا في الصّبر والتحمّل،
    ومن الأمثلة على ذلك صبر نساء بني هاشم حينما حوصرن مع أهليهم
        في شعاب مكّة ثلاث سنين ولم يزدهم ذلك إلاّ إيمانًا وتسليماً.</string>
    <string name="clothtitle">كيف كان لباس الصَّحابيّات</string>
    <string name="clothtext">لباس الصَّحابيّات</string>
    <string name="clothtext_desc">لباس الصَّحابيّات رضوان الله عليهنّ جميعًا كان تطبيقاً لما نصّت عليه الآية الكريمة قال تعالى
    " يا أيها النّبيّ قُلْ لأزواجك وبناتك ونساء المؤمنين يُدنين عليهنّ من جلابيبهنّ ذلك أدنى أنْ يُعرفنّ فلا يؤذين وكان الله غفورًا رحيمًا"
        فدّلت هذه الآية دلالةً قاطعةً على أنّ لباس الصّحابيّات الذي أُمرنّ به والتزمنّ به له عدّة صفاتٍ،
        كان يمتاز لباسهنّ رضي الله عنهنّ بأنّه منسدلٌ على منطقة النَّحر- الصَّدر- والذَّقن،
        كما أنّه لباسٌ مخصّصٌ للنساء في ألوانه وتفصيله بعيدًا عن ألوان ثياب الرِّجال وتفصيلاتهم.
        فهو لا يصفُ ما تحته ولا يُلفت أنظار الرِّجال لها. ومن ضِمن لباس الصَّحابيّات الخِمار، وهو ما تضعه المرأة فوق رأسها لتغطية رأسها ورقبتها، ويكون منسدلًا حتى وسطها، وفضفاضًا من قُماشٍ سميكٍ، أمّا بالنسبة إلى تغطية الوجه ففيه جدلٌ كبيرٌ، فهناك من العلماء من أوجبه، وفريقٌ آخر أقرّ باستحبابه

    </string>
    <string name="wives_menu">زوجات الرسول</string>
    <string name="wivestitle">زوجات النبي صل الله عليه وسلم</string>
    <string name="fristwife">خديجة بنت خويلد رضى الله عنها</string>
    <string name="secondwife">سودة بنت زمعة القرشية</string>
    <string name="thirdwife">عائشة بنت أبى بكر</string>
    <string name="forthwife">حفصة بنت عمر بن الخطاب</string>
    <string name="fifthwife">زينب بنت خزيمة</string>
    <string name="sixwife">أم سلمة رضى الله عنها</string>
    <string name="sevenwife">زينب بنت جحش</string>
    <string name="eightwife">جورية بنت الحارث</string>
    <string name="ninewife">أم حبيبة بنت أبى سفيان</string>
    <string name="tenwife">ماريةالقبطية</string>
    <string name="elevenwife">صفية بنت حى بن أخطب</string>
    <string name="twelvewife">ميمونة بنت الحارث</string>
    <string name="duaters_menu">بنات الرسول </string>
    <string name="duaterstitle">بنات النبي صل الله عليه وسلم </string>
    <string name="fristduater">زينب رضى الله عنها </string>
    <string name="secondduater">رقية رضى الله عنها </string>
    <string name="thirdduater">أم كلثوم رضى الله عنها </string>
    <string name="forthduater">فاطمة الزهراء رضى الله عنها </string>
    <string name="lady1"> عائشة رضى الله عنها </string>
    <string name="lady1_description">خطب النبيّ -صلّى الله عليه وسلّم- السيّدة عائشة -رضي الله عنها-
        من أبيها أبي بكر الصِّديق -رضي الله عنه- بعد وفاة خديجة بنت خويلد رضي الله عنها،
        وكان ذلك قبل الهجرة النبويّة بأشهُر، وقيل قبل الهجرة بسنتين
         لكنَّ النبي -صلّى الله عليه وسلّم- لم يدخل بعائشة -رضي الله عنها- إلّا بعد الهجرة
        بعد سنتين من غزوة بدر وقد كانت في التاسعة من عمرها وفق أرجح الرّوايات
        شاركت السيدة عائشة في بعض الغزوات كغيرها من أمّهات المؤمنين والصحابيّات رضي الله عنهنَّ
        ففي غزوة أُحُد شاركت عائشة -رضي الله عنها- في ملء قِرَب الماء لجنود جيش المسلمين
        وقد حدَّث أنس بن مالك -رضي الله عنه- عن ذلك، فقال:
        (ولقد رأيتُ عائشةَ بنتَ أبي بكرٍ وأمَّ سُلَيمٍ، وإنّهما لمُشَمِّرَتانِ، أرَى خَدَمَ سوقِهما، تُنْقِزَانِ القِرَبَ على مُتُونِهما
        تُفرِغانِه في أفواهِ القومِ، ثمّ تَرجِعانِ فتَملآنِها، ثمّ تَجيئانِ فتُفرِغانِه في أفواهِ القومِ)
        حادثة الفِتنة كان لأمِّ المؤمنين عائشة -رضي الله عنها- موقف جليل من الفِتنة التي حدثت بين الصّحابة بعد وفاة عمر بن الخطَّاب -رضي الله عنه- وتولّي عثمان بن عفّان -رضي الله عنه- الخلافة
        ، فقد ارتأت وجوب القَصاص من قتَلة عثمان رضي الله عنه، والتزمت بيتها بعد واقعة الجمل
        ، ولم تُشارك إلّا في المشورة والنُّصح وأشهر ما جاء من نُصحِها ما وجَّهته إلى معاوية بن أبي سفيان -رضي الله عنه- حين سألها نُصحَها وطلب منها أن توصيه
        فقالت له: (سلامٌ عليكَ، أمَّا بعدُ، فإنِّي سمعتُ رسولَ اللهِ -صلَّى اللهُ عليهِ وسلَّمَ- يقول:
        منِ التمَسَ رِضا اللهِ بسخطِ النَّاسِ كفاهُ اللهُ مَؤونةَ النَّاسِ، ومنِ التمسَ رضا النَّاسِ بسخطِ اللهِ وَكَّلََهُ اللهُ إلى النَّاسِ، والسَّلامُ عليكَ)

 </string>
    <string name="lady2"> خديجة رضى الله عنها </string>
    <string name="lady2_Description">  لقد كانت السيّدة خديجة تتصف بالمال والجاه والتجارة الرابحة في الجاهلية،
        وكانت تستأجر الشباب للتجارة بمالها. حيث كانت ترسلهم إلى الشام لشراء البضائع
        فسمعت عن صدق وأمانة سيّدنا محمد فاستأجرته وأعطته مالاً أكثر ممّا كانت تعطي الذين قبله
        فقبل النبي بذلك وخرج في مالها مع غلامها ميسرة
        وباع النبي صلى الله عليه وسلّم البضاعة التي معه واشترى بضاعةً جديدةً وعاد إلى مكة المكرمة
        وباعت السيّدة خديجة البضاعة وربحت ضعف ما كانت تربح في الغالب.

        لقد عاشت السيّدة خديجة خمسةً وعشرين عاماً مع النبي صلى الله عليه وسلّم،
        ووقفت إلى جانبه عندما نزل عليه الوحي بالرسالة الربانية وكانت أول من آمن به،
        وكانت تخفف عنه صلى الله عليه وسلّم كل ما به من حزنٍ وأذى يلحق به من قريشٍ،
        وعاشت معه كل ماعاش من أذى قريشٍ

        توفيت السيّدة خديجة قبل الهجرة بثلاثة أعوام وقد سبب وفاتها الكثير من الحزن للنبي صلى الله عليه وسلّم.

</string>
    <string name="lady3"> السيدة رقيةرضى الله عنها</string>
    <string name="lady3_Description"> رقية بنت رسول الله صل الله علية وسلم ؛ أمها خديجة
    بنت خويلد رضى الله عنها ؛ أسلمت حين أسلمت أمها ؛ وبايعت رسول الله صل الله عليه وسلم
    وكان عمرها عند اسلامها سبع سنوات كانت تكنى بأم عبدالله
    وكانت تكنى بذات الهجرتين ( هجرة الحبشة وهجرة المدينة)
    تزوجت من عتبة ابن لهب وهى دون العشر سنوات ولما نزلت "تبت يدا ابى لهب وتب"
    قال ابو لهب وأم جميل لابنهما أن يفارقها وكانت كرامة لها وهوان له من الله
    وشاء الله أن يرزقها عوضا خيرا مما رات فتزوجت من عثمان بن عفان
    أحد العشرة المبشرين بالجنة ومن العشر الاوائل من أسلم مع رسول الله
    رزقت بعدالله وتوفقت فى عمر الثانية والعشرون ودفنت فى البقيع </string>
    <string name="lady4">  أروى بنت عبدالمطلب</string>
    <string name="lady4_description"> هى الصحابية الجليلة أروى بنت عبدالمطلب بن هاشم القرشية الهاشمية
    ؛ عمة رسول الله صل الله عليه وسلم ؛كان زوجها فى الجاهلية عمير بن وهب
    رزقت منه طليب ؛وأسلم طليب قبل أمه بفترة بسيطة فى دار الأرقم وأسلمت هى بعد أن
      دعاها للاسلام ؛ كانت شاعرة مجيدة فكانت تقول الشعر دفاعا عن رسول الله صل الله عليه وسلم وكانت
        تحث ابنها طليبا على الدفاع عن النبى صل الله عليه وسلم
        عندما عرض أبو لهب وعدد من كفار قريش بالأذى للنبى (صل الله عليه وسلم) ؛عمد طليب إلى أبو لهب فضربه
        ضربة مبرحة فشجه ؛ فأخذوه وأوثقوه حتى خلاه أبو لهب
        فقيل لأروى : ألا ترين أن ابنك طليبا قد صير نفسه عرضا دون محمد ؟
        قالت : خير أيامه يوم يعذب عن ابن خاله وقد جاء بالحق من عند الله
        كانت تتصف أروى بجميل الصفات من صدق وأمانة ورجاحه العقل وكانت تدعو النساء
        الى الاسلام واتباع محمد صل الله عليه وسلم

    </string>
    <string name="lady5">  خولة بنت ثعلة </string>
    <string name="lady5_description"> صحابية جليلة من الأنصار ؛زوجة الصحابي المجاهد أوس بن الصامت
    اشتهرت بأنها الصحابية الصابرة المؤمنة؛ امراة سمع الله شكواها
    من فوق سبع سماوات وهى تشتكى وتجادل رسول الله صل الله عليه وسلم
    عندما قال لها زوجها (انتى علي كظهر أمى)ونزلت فيها سورة المجادلة
    وقال عنها أمير المؤمنين "إنها خولة بنت ثعلب سمع الله قولها من فوق سبع سماوات
    أيسمع قولها رب العالمين ولا يسمعه عمر"
    رضى الله عنها صاحبة الايمان والعظمة</string>
    <string name="lady6">نسيبة بنت كعب</string>
    <string name="lady6_description">كانت أم عمارة من أوائل أهل يثرب دخولاً في الإسلام،
    فقد كانت إحدى امرأتان بايعتا النبي محمد في بيعة العقبة الثانية.
     ولما هاجر النبي محمد إلى يثرب، كانت أم عمارة من المخلصات في نشر الدين،
      فشاركت في غزوة أحد مع زوجها غزية بن عمرو وابنيها، لتسقى الجرحى وتطبّبهم،
     لكنها بعد أن دارت الدائرة على المسلمين قاتلت هي وزوجها وابناها دفاعًا عن النبي محمد،
    وأبلت بلاء حسنًا وجُرحت ثلاثة عشر جُرحاً بين طعنة برمح أو ضربة بسيف،
      فدعا لهم النبي محمد أن يكونوا رفقائه في الجنة
    تميزت أم عمارة بالإخلاص لدينها، وشجاعتها في الذود عنه، وهو ما تجلّى من قتالها في غزوتي أحد وحنين ومعركة اليمامة،
    كما عُرف عنها صبرها،
     فعندما جاءها الخبر بمقتل ابنها حبيب على يدي مسيلمة، قالت: «لمثل هذا أعددته وعند الله احتسبته.» ومن حرصها على ابتغاء ثواب عبادتها،
     أتت أم عمارة النبي محمد يومًا، فقالت: «ما أرى كل شيء إلا للرجال، وما أرى النساء يذكرن بشيء؟»
    </string>
    <string name="lady7">فاطمة الزّهراء رضى الله عنها</string>
    <string name="lady7_description">وهي الزّهراء بنت محمد رسول الله، وأمها خديجةُ بنت خويلد
    وقد شهدت فاطمة تعذيب قوم قريش للرسول صلى الله عليه وسلم،
    فكانت دائماً ما تعين الرّسول الكريم وتشد من أزره وتسانده في طريقه للدعوة،
    فعندما كان عم الرّسول صلى الله عليه وسلم أبو لهب وامرأتهُ يرميان القذورات أمام منزله،
    كانت فاطمةُ الزّهراء تتولى مهمةَ إزالة هذه القذورات، وتطهير المكان
    كما شهدت حادثة حصار المسلمين في بداية الدّعوة من قبيلة قريش لمدة ثلاث سنوات،
    ومنع دخول الطّعام إلى المسلمين وبيعه لهم حتى أصاب المسلمين التّعبُ، فتناولوا الأعشاب والأوراق،
    فتأثرت فاطمة الزّهراء بهذه الحادثة كثيراً وأصابها الجوع والتّعب الشّديدين،
    ورغم ذلك زاد إيمانها ونضجها،
    وبعد الخروج من فترة الحصار توفيت أمها خديجة بنت خويلد التّي تركت بفراقها حزناً كبيراً في قلب الرّسول صلى الله عليه وسلم وفاطمة الزّهراء،
    وتوفي بعدها بفترةٍ قصيرةٍ عم الرّسول أبو طالب،
        مما زاد من مسؤولية فاطمةَ الزّهراء رضي الله عنها في معاونةِ الرّسول، فلقّبها العديد من الصّحابة بأم أبيها.
        تزوجت فاطمة الزّهراء من علي بن أبي طالب في شهر ذي القعدة بعد معركة بدر بسنتين، وأنجبت منه الحسن والحسين سيدي شباب الجنة،
        والمحسن بن علي لكنه مات في صغره، وأنجبت ابنتين وهما زينب بنت علي وأم كلثوم بنت علي

    </string>
    <string name="lady8">تماضر السلمية رضى الله عنها</string>
</resources>