<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/behaviours_menu"
            android:title="@string/description_menu"
            android:icon="@android:drawable/ic_menu_save"
            />

        <item
            android:id="@+id/cloth_menu"
            android:title="@string/cloth_menu"
            android:icon="@android:drawable/ic_menu_save"
            />


        <item
            android:id="@+id/wives_menu"
            android:title="@string/wives_menu"
            android:icon="@android:drawable/ic_menu_save"
            app:showAsAction="never"/>

        <item
            android:id="@+id/dauters_menu"
            android:title="@string/duaters_menu"
            android:icon="@android:drawable/ic_menu_save"
            app:showAsAction="never"/>
        <item
            android:id="@+id/saved_ladies"
            android:title="قائمة المفضلات"
            android:icon="@android:drawable/ic_menu_save"
            app:showAsAction="never"/>

    </group>



</menu>