<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item"
    tools:context=".Views.WivesActivity">
    <TextView
        android:id="@+id/wivestitle"
        android:text="@string/wivestitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/text_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

    <TextView
        android:id="@+id/fristwife_textview"
        android:text="@string/fristwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/secondwife_textview"
        android:text="@string/secondwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/thirdwife_textview"
        android:text="@string/thirdwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/forthwife_textview"
        android:text="@string/forthwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/fifewife_textview"
        android:text="@string/fifthwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/sixwife_textview"
        android:text="@string/sixwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/sevenwife_textview"
        android:text="@string/sevenwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/eightwife_textview"
        android:text="@string/eightwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/ninewife_textview"
        android:text="@string/ninewife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tenwife_textview"
        android:text="@string/tenwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/elevenwife_textview"
        android:text="@string/elevenwife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/twelvewife_textview"
        android:text="@string/twelvewife"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

</LinearLayout>