<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item"
    tools:context=".Views.BehavioursActivity">
    <TextView
        android:id="@+id/destitle_textview"
        android:text="@string/description_menu"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/text_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/descriptiontext1_textview"
        android:text="@string/descriptiontext1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/descriptiontext11_textview"
        android:text="@string/descriptiontext11"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/descriptiontext2_textview"
        android:text="@string/descriptiontext2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/descriptiontext22_textview"
        android:text="@string/descriptiontext22"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/descriptiontext3_textview"
        android:text="@string/descriptiontext3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/descriptiontext33_textview"
        android:text="@string/descriptiontext33"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/descriptiontext4_textview"
        android:text="@string/descriptiontext4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/descriptiontext44_textview"
        android:text="@string/descriptiontext44"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>