<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item"
    tools:context=".Views.DuatersActivity">

    <ImageView
        android:id="@+id/duaters_imageview"
        android:background="@drawable/mohamed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/duaterstitle"
        android:text="@string/duaterstitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/text_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/fristduater_textview"
        android:text="@string/fristduater"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/secondduater_textview"
        android:text="@string/secondduater"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/thirdduater_textview"
        android:text="@string/thirdduater"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/forthduater_textview"
        android:text="@string/forthduater"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />




</LinearLayout>