<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item"
    tools:context=".Views.ClothsDesActivity">

    <TextView
        android:id="@+id/clothtitle_textview"
        android:text="@string/clothtitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/text_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/clothtext_textview"
        android:text="@string/clothtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/clothtext_desc_textview"
        android:text="@string/clothtext_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>